Make source code more readable. Add support for JMX service URL